test/compile_errors/err_typeinfo_runtime_context.w
//! expect-check-fail: TypeInfo is only available in comptime context

type Point { x: i32 }

fn main:
    let _ = TypeInfo.name[Point]()
